release: v0.37.0 (#128)
* docs(openapi): Update spec (#121)

* feat: List supported languages (#122)

* feat: Download languages template (#123)

* feat: Create new test block (#126)

* feat: Update test block (#127)
